# NVP_Front

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/: page.tsx
app/api/classify/: pages.tsx  route.ts
app/hello/: page.tsx  pages.tsx
app/training/: page.tsx
components/camera/: CameraControls.tsx  CameraView.tsx  CropPreview.tsx  HandStatus.tsx  useCamera.ts  useCropPreview.ts  useHandTracking.ts
components/pages/: home.tsx  training.tsx
components/textBox/: TranscriptionBox.tsx
src/: main.py
types/: validator.ts
