[project]
name = "nvp-front"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "av>=16.0.1",
    "mediapipe>=0.10.14",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
    "streamlit-webrtc>=0.64.5",
]
